correctly aligned user button

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -26,6 +26,7 @@ nav {
   display:flex;
   justify-content: space-between;
   box-sizing: border-box;
+  align-items: center;
 }
 
 .subNav {
